--- a/package.json
+++ b/package.json
@@ -27,13 +27,16 @@
         "prepare": "husky"
     },
     "devDependencies": {
+        "@eslint/js": "9.39.2",
         "@typescript-eslint/eslint-plugin": "^8.0.0",
         "@typescript-eslint/parser": "^8.0.0",
         "eslint": "^9.0.0",
+        "globals": "16.5.0",
         "husky": "^9.0.0",
         "lint-staged": "^15.0.0",
         "prettier": "^3.0.0",
-        "typescript": "^5.6.0"
+        "typescript": "^5.6.0",
+        "typescript-eslint": "8.50.1"
     },
     "lint-staged": {
         "*.{ts,tsx,js,jsx}": [
