--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -15,6 +15,7 @@
     "clean": "rm -rf .expo node_modules"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "2.2.0",
     "@react-navigation/native": "^7.0.0",
     "@tanstack/react-query": "^5.0.0",
     "expo": "~52.0.0",
@@ -27,7 +28,7 @@
     "react-native": "0.76.5",
     "react-native-safe-area-context": "4.14.0",
     "react-native-screens": "~4.4.0",
-    "zustand": "^5.0.0"
+    "zustand": "^5.0.9"
   },
   "devDependencies": {
     "@babel/core": "^7.25.0",
