--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "description": "校园宝 Next.js 后端应用",
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 3000",
     "build": "next build",
     "start": "next start",
     "lint": "eslint .",
@@ -12,8 +12,25 @@
     "db:generate": "prisma generate",
     "db:push": "prisma db push",
     "db:studio": "prisma studio",
+    "db:migrate": "prisma migrate dev",
     "clean": "rm -rf .next node_modules"
   },
-  "dependencies": {},
-  "devDependencies": {}
+  "dependencies": {
+    "next": "16.1.1",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "@prisma/client": "^6.0.0",
+    "next-auth": "5.0.0-beta.25",
+    "zod": "^3.23.0",
+    "bcryptjs": "^2.4.3",
+    "ioredis": "^5.4.0"
+  },
+  "devDependencies": {
+    "@types/node": "^22.0.0",
+    "@types/react": "^19.0.0",
+    "@types/react-dom": "^19.0.0",
+    "@types/bcryptjs": "^2.4.0",
+    "prisma": "^6.0.0",
+    "typescript": "^5.6.0"
+  }
 }
