--- a/package.json
+++ b/package.json
@@ -1,20 +1,20 @@
 {
-  "name": "xiaoyuanbao",
+  "name": "campus-treasure",
   "displayName": "校园宝 (Campus Treasure)",
   "version": "1.0.0",
   "private": true,
   "description": "Campus second-hand trading platform with React Native + Next.js",
   "repository": {
     "type": "git",
-    "url": "https://github.com/kayson/xiaoyuanbao.git"
+    "url": "https://github.com/kayson/campus-treasure.git"
   },
   "scripts": {
     "preinstall": "npx only-allow pnpm",
-    "dev:mobile": "pnpm --filter @xiaoyuanbao/mobile dev",
-    "dev:backend": "pnpm --filter @xiaoyuanbao/backend dev",
+    "dev:mobile": "pnpm --filter @campus-treasure/mobile dev",
+    "dev:backend": "pnpm --filter @campus-treasure/backend dev",
     "dev": "pnpm run dev:mobile & pnpm run dev:backend",
-    "build:mobile": "pnpm --filter @xiaoyuanbao/mobile build",
-    "build:backend": "pnpm --filter @xiaoyuanbao/backend build",
+    "build:mobile": "pnpm --filter @campus-treasure/mobile build",
+    "build:backend": "pnpm --filter @campus-treasure/backend build",
     "build": "pnpm -r build",
     "lint": "pnpm -r lint",
     "format": "prettier --write \"**/*.{ts,tsx,js,jsx,json,md}\"",
