--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -20,6 +20,7 @@
     "@tanstack/react-query": "^5.0.0",
     "expo": "~52.0.0",
     "expo-constants": "~17.0.0",
+    "expo-image-picker": "~16.0.6",
     "expo-linking": "~7.0.0",
     "expo-router": "~4.0.0",
     "expo-secure-store": "15.0.8",
