--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -16,8 +16,9 @@
     "clean": "rm -rf .next node_modules"
   },
   "dependencies": {
-    "@prisma/client": "^7.2.0",
+    "@prisma/client": "^5.22.0",
     "bcryptjs": "^2.4.3",
+    "dotenv": "17.2.3",
     "ioredis": "^5.4.0",
     "jose": "6.1.3",
     "jsonwebtoken": "9.0.3",
@@ -36,8 +37,12 @@
     "@types/react-dom": "^19.0.0",
     "jest": "^29.7.0",
     "jest-environment-node": "^29.7.0",
-    "prisma": "^7.2.0",
+    "prisma": "^5.22.0",
     "ts-jest": "^29.1.2",
+    "ts-node": "10.9.2",
     "typescript": "^5.6.0"
+  },
+  "prisma": {
+    "seed": "ts-node prisma/seed.ts"
   }
 }
