--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -15,6 +15,7 @@
     "clean": "rm -rf .expo node_modules"
   },
   "dependencies": {
+    "@expo/ngrok": "^4.1.0",
     "@react-native-async-storage/async-storage": "2.2.0",
     "@react-navigation/native": "^7.0.0",
     "@tanstack/react-query": "^5.0.0",
@@ -31,7 +32,6 @@
     "react-native": "0.81.5",
     "react-native-safe-area-context": "5.6.2",
     "react-native-screens": "~4.16.0",
-    "socket.io-client": "4.8.3",
     "zustand": "^5.0.9"
   },
   "devDependencies": {
